Refactored input and ingredient list related properties in Converter.js to stop React logging errors. Also noticing that with perspective applied to transform animation for dropdowns it will make text blurry if dropdown is below max height value, unsure if this is due to a conflict relating to the overflow property, looking into a fix

--- a/src/index.css
+++ b/src/index.css
@@ -213,12 +213,12 @@ input:focus {
 
 @keyframes growDown {
     0% {
-        transform: perspective(1px) scaleY(0)
+        transform: perspective(0px) scaleY(0)
     }
     80% {
-        transform: perspective(1px) scaleY(1.1)
+        transform: perspective(0px) scaleY(1.1)
     }
     100% {
-        transform: perspective(1px) scaleY(1)
+        transform: perspective(0px) scaleY(1)
     }
 }
